# game-project

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  com.ps1  config.json  editor.ps1  editorConfig.json  game.ps1  imgui.ini  main.cpp
.github/workflows/: main.yml
data/: monster.lua  player.lua  worlds.py
data/behaviors/: behaviors.json
data/behaviors/scripts/: monster.lua  player.lua
data/behaviours/scripts/: monster.lua  player.lua
data/entities/: entities.json
data/entities/prefabs/: blueBlock.json  nullBlock.json  testBlock.json
data/scenes/: 01.scene  scene_01.json
data/scripts/: monster.lua
data/textures/: sprites.json  textures.json
editor-src/: main.cpp
src/: camera.hpp  color.cpp  color.hpp  config.hpp  console.hpp  entities.hpp  entity-container.cpp  entity-container.hpp  entity.cpp  entity.hpp  filepath.cpp  filepath.hpp  json.cpp  json.hpp  keyboard.hpp  log.hpp  main.cpp  particle.cpp  particle.hpp  physics.hpp  physics_engine.hpp  prefab.hpp  rectangle.hpp  scene-serialization.hpp  scene.cpp  scene.hpp  script-library.cpp  script-library.hpp  script-manager.cpp  script-manager.hpp  scriptManager.cpp  scriptManager.hpp  singleton.hpp  sprite-manager.cpp  sprite-manager.hpp  vector2.hpp  window.cpp  window.hpp
src/console/: console.cpp  console.hpp  core.cpp  core.hpp  window.cpp  window.hpp
src/entities/container/: container.cpp  container.hpp
src/entities/prefab/: prefab.cpp  prefab.hpp
src/graphics/: window.cpp  window.hpp
src/graphics/camera/: camera.cpp  camera.hpp
src/graphics/window/: window.cpp  window.hpp
src/scene/: scene.cpp  scene.hpp
src/scene/reader/: reader.cpp  reader.hpp
src/scripts/: core.cpp  core.hpp  library.hpp
src/scripts/lib/: get-entity-position.cpp  get-entity-size.cpp  get-entity-width.cpp  get-is-key-pressed.cpp  log-error.cpp  log-warning.cpp  log.cpp  set-entity-position.cpp  set-entity-size.cpp  set-entity-width.cpp
src/scripts/reader/: reader.cpp  reader.hpp
src/sprites/: manager.cpp  manager.hpp
src/sprites/reader/: reader.cpp  reader.hpp
src/utils/filepath/: filepath.cpp  filepath.hpp
src/utils/log/: log.hpp
src/utils/rectangle/: rectangle.cpp  rectangle.hpp
